[metadata]
name = minnmaps
url = https://github.com/hypercoil/minnmaps
download_url = https://github.com/hypercoil/minnmaps
author = Network Neuroscience Lab
maintainer = null
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD-3
description = Minimal neuromaps
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    minnmaps

[options]
python_requires = >=3.7
install_requires =
    nibabel >=3.0.0
    numpy >=1.14.0
    requests
    scipy >=0.17
zip_safe = False
packages = find:

[options.extras_require]
style =
    flake8
test =
    coverage
    pytest >=3.6
    pytest-cov
all =
    %(style)s
    %(test)s

[options.package_data]
minnmaps =
    data/*
    datasets/data/*

[bdist_wheel]
universal=1

[coverage:run]
omit =
    minnmaps/_version.py

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = minnmaps/_version.py
versionfile_build = minnmaps/_version.py
tag_prefix =
parentdir_prefix =
